--- a/Task-List/Using-API/styles/styles.css
+++ b/Task-List/Using-API/styles/styles.css
@@ -18,7 +18,6 @@ body {
 }
 
 header h1 {
-  font-family: 'Poppins', sans-serif;
   font-size: 1.5rem;
   font-weight: 700;
   color: white;
@@ -33,12 +32,13 @@ main {
 }
 
 main button {
+  font-family: 'Poppins', sans-serif;
   cursor: pointer;
-  padding: .5rem 1rem;
+  padding: .5rem .6rem;
   border-radius: 10px;
-  width: 40%;
+  width: 56%;
   border: none;
-  font-size: 1.2rem;
+  font-size: 1rem;
   background-color: white;
   -webkit-box-shadow: 0.2rem 0.2rem 0 0 rgba(0, 0, 0, 0.13);
           box-shadow: 0.2rem 0.2rem 0 0 rgba(0, 0, 0, 0.13);
