--- a/Task-List/Using-API/styles/styles.scss
+++ b/Task-List/Using-API/styles/styles.scss
@@ -18,7 +18,7 @@ body {
 
 header {
     h1 {
-        font-family: 'Poppins', sans-serif;
+        
         font-size: 1.5rem;
         font-weight: 700;
         color: white;
@@ -30,12 +30,13 @@ main {
     gap: .5rem;
 
     button {
+        font-family: 'Poppins', sans-serif;
         cursor: pointer;
-        padding: .5rem 1rem;
+        padding: .5rem .6rem;
         border-radius: 10px;
-        width: 40%;
+        width: 56%;
         border: none;
-        font-size: 1.2rem;
+        font-size: 1rem;
         background-color: white;
         box-shadow: 0.2rem .2rem 0 0 rgba(0, 0, 0, 0.13);
         
