--- a/Task-List/css/styles.css
+++ b/Task-List/css/styles.css
@@ -21,30 +21,29 @@ button {
   cursor: pointer;
 }
 
+input[type='text'] {
+  font-family: 'Poppins', sans-serif;
+}
+
 body {
-  min-height: 100vh;
   background: var(--body-bg);
   background: linear-gradient(195deg, var(--body-grad1) 50%, var(--body-grad2) 50%);
   background-repeat: no-repeat;
   font-family: 'Poppins', sans-serif;
 }
 
-body main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 2rem;
-  padding: 3rem 1rem;
+body header {
+  background: var(--body-bg);
+  min-height: 10vh;
+  position: fixed;
+  top: 0;
+  padding: 1rem;
+  margin-top: 1rem;
+  border-radius: 10px;
+  z-index: 10;
 }
 
-body main .main-card {
+body header .main-card {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -66,7 +65,7 @@ body main .main-card {
   border-radius: 9px;
 }
 
-body main .main-card .card-header {
+body header .main-card .card-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -76,13 +75,13 @@ body main .main-card .card-header {
           align-items: center;
 }
 
-body main .main-card .card-header h1 {
+body header .main-card .card-header h1 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.5rem;
   font-weight: 700;
 }
 
-body main .main-card .card-header #show-input {
+body header .main-card .card-header #show-input {
   width: 2rem;
   height: 2rem;
   border: none;
@@ -92,7 +91,7 @@ body main .main-card .card-header #show-input {
   background-color: var(--body-grad2);
 }
 
-body main .main-card form {
+body header .main-card form {
   padding: 0.5rem;
   display: none;
   gap: 1rem;
@@ -103,7 +102,7 @@ body main .main-card form {
   width: 90%;
 }
 
-body main .main-card form[aria-expanded="true"] {
+body header .main-card form[aria-expanded="true"] {
   -webkit-animation: slidein 300ms forwards;
           animation: slidein 300ms forwards;
   display: -webkit-box;
@@ -111,7 +110,7 @@ body main .main-card form[aria-expanded="true"] {
   display: flex;
 }
 
-body main .main-card form[aria-expanded="false"][data-transition="true"] {
+body header .main-card form[aria-expanded="false"][data-transition="true"] {
   -webkit-animation: slideout 300ms forwards;
           animation: slideout 300ms forwards;
   display: -webkit-box;
@@ -119,7 +118,7 @@ body main .main-card form[aria-expanded="false"][data-transition="true"] {
   display: flex;
 }
 
-body main .main-card form div .description {
+body header .main-card form div .description {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -128,22 +127,22 @@ body main .main-card form div .description {
           justify-content: space-between;
 }
 
-body main .main-card form div .description p {
+body header .main-card form div .description p {
   -webkit-transform: translateY(1.6rem) translateX(0.5rem);
           transform: translateY(1.6rem) translateX(0.5rem);
 }
 
-body main .main-card form div .description p[aria-expanded="true"] {
+body header .main-card form div .description p[aria-expanded="true"] {
   -webkit-animation: goUp 400ms forwards;
           animation: goUp 400ms forwards;
 }
 
-body main .main-card form div .description p[aria-expanded="false"][data-transition="true"] {
+body header .main-card form div .description p[aria-expanded="false"][data-transition="true"] {
   -webkit-animation: goDown 400ms forwards;
           animation: goDown 400ms forwards;
 }
 
-body main .main-card form div .description button {
+body header .main-card form div .description button {
   background-image: url("https://cdn-icons-png.flaticon.com/512/1159/1159745.png");
   background-size: contain;
   border: none;
@@ -152,7 +151,7 @@ body main .main-card form div .description button {
   width: 11%;
 }
 
-body main .main-card form div .description button:focus {
+body header .main-card form div .description button:focus {
   -webkit-transition-property: background;
   transition-property: background;
   -webkit-transition: 400ms ease-in-out;
@@ -160,23 +159,23 @@ body main .main-card form div .description button:focus {
   background-image: url("https://cdn-icons-png.flaticon.com/512/248/248961.png");
 }
 
-body main .main-card form div .error-msg {
+body header .main-card form div .error-msg {
   font-size: .8rem;
   font-weight: 700;
   padding: .3rem 0;
   color: var(--conf-bt-bg);
 }
 
-body main .main-card form div, body main .main-card form fieldset {
+body header .main-card form div, body header .main-card form fieldset {
   border: none;
 }
 
-body main .main-card form div input, body main .main-card form fieldset input {
+body header .main-card form div input, body header .main-card form fieldset input {
   width: 100%;
   height: 1.5rem;
 }
 
-body main .main-card form .form-botao {
+body header .main-card form .form-botao {
   width: 35%;
   padding: .3rem;
   background-color: var(--body-grad2);
@@ -187,27 +186,41 @@ body main .main-card form .form-botao {
           box-shadow: 0.15rem 0.2rem 0 0 rgba(0, 0, 0, 0.164);
 }
 
-body main .main-card form .form-botao:hover {
+body header .main-card form .form-botao:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
 
-body main .main-card form .form-botao:focus {
+body header .main-card form .form-botao:focus {
   -webkit-transform: scale(1);
           transform: scale(1);
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
+body main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+  padding: 3rem 1rem;
+  margin-top: 5rem;
+}
+
 body main ul {
   display: -ms-grid;
   display: grid;
+  margin: 0 2rem;
   border-radius: 9px;
-  max-height: 73vh;
   gap: 1rem;
   width: 100%;
-  overflow: hidden;
-  overflow-y: scroll;
   background-color: transparent;
   list-style-type: none;
 }
@@ -225,6 +238,7 @@ body main ul li {
   -webkit-box-shadow: 0.1rem 0.1rem 0 0 #979696;
           box-shadow: 0.1rem 0.1rem 0 0 #979696;
   background-color: white;
+  word-break: break-all;
 }
 
 body main ul li .task-checker {
@@ -258,7 +272,6 @@ body main ul li label, body main ul li input[type=text] {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
-  word-break: keep-all;
   -ms-grid-column-align: start;
       justify-self: start;
   margin-left: .5rem;
@@ -430,12 +443,6 @@ body main ul li[aria-expanded="false"][data-transition="true"] > label::after {
 .done label::after {
   -webkit-transform: scale(1);
           transform: scale(1);
-}
-
-@media (min-width: 600px) {
-  main {
-    padding: 3rem 6rem !important;
-  }
 }
 
 @media (min-width: 1000px) {
