--- a/Task-List/css/styles.scss
+++ b/Task-List/css/styles.scss
@@ -17,136 +17,149 @@
 button {
   cursor: pointer;
 }
+input[type='text'] {
+  font-family: 'Poppins', sans-serif;
+}
 body {
-  min-height: 100vh;
   background: var(--body-bg);
   background: linear-gradient(195deg, var(--body-grad1) 50%, var(--body-grad2) 50%);
   background-repeat: no-repeat;
   font-family: 'Poppins', sans-serif;
 
+  header {
+    background: var(--body-bg);
+    min-height: 10vh;
+    // width: 100%;
+    position: fixed;
+    top: 0;
+    padding: 1rem;
+    margin-top: 1rem;
+    border-radius: 10px;
+    z-index: 10;
+
+    .main-card {
+      display: flex;
+      flex-direction: column;
+      align-self: flex-start;
+      align-items: center;
+      background-color: var(--card-bg);
+      width: stretch;
+      max-width: 19rem;
+      padding: 1rem;
+      border-radius: 9px;
+      
+      .card-header {
+        display: flex;
+        gap: 1.5rem;
+        align-items: center;
+                  
+        h1 {
+          font-family: 'Poppins', sans-serif;
+          font-size: 1.5rem;
+          font-weight: 700;
+        }
+        #show-input {
+          width: 2rem;
+          height: 2rem;
+          border: none;
+          border-radius: 20px;
+          color: var(--plus-bt);
+          font-size: 1.2rem;
+          background-color: var(--body-grad2); 
+        }
+      }
+      form {
+        padding: 0.5rem;
+        display: none;
+        gap: 1rem;
+        flex-direction: column;  
+        width: 90%;      
+
+        &[aria-expanded="true"] {
+          animation: slidein 300ms forwards;
+          display: flex;
+        }
+        &[aria-expanded="false"][data-transition="true"] {
+          animation: slideout 300ms forwards;
+          display: flex;
+        }
+        div { 
+          .description {
+            display: flex;
+            justify-content: space-between;
+
+            p {                
+              transform: translateY(1.6rem) translateX(.5rem);
+              &[aria-expanded="true"] {
+                animation: goUp 400ms forwards;
+              }
+              &[aria-expanded="false"][data-transition="true"] {
+                animation: goDown 400ms forwards;
+              }
+            }
+            button {         
+              background-image: url('https://cdn-icons-png.flaticon.com/512/1159/1159745.png');
+              background-size: contain;
+              border: none;
+              background-repeat: no-repeat;
+              background-color: transparent;
+              width: 11%;
+              
+              &:focus {
+                transition-property: background;
+                transition: 400ms ease-in-out;
+                background-image: url('https://cdn-icons-png.flaticon.com/512/248/248961.png');
+              }
+            }
+          }                       
+            .error-msg {
+              font-size: .8rem;
+              font-weight: 700;
+              padding: .3rem 0;
+              color: var(--conf-bt-bg);
+            }
+        }
+        div,fieldset {           
+          border: none;    
+          input {
+            width: 100%;
+            height: 1.5rem;
+          } 
+        } 
+        .form-botao {
+          width: 35%;  
+          padding: .3rem;
+          background-color: var(--body-grad2);
+          font-size: 1rem;
+          border-radius: 9px;
+          border: none;
+          box-shadow: .15rem .2rem 0 0 rgba(0, 0, 0, 0.164);
+
+          &:hover {
+            transform: scale(1.1);
+          }
+          &:focus {
+            transform: scale(1);
+            box-shadow: none;
+          }
+        }  
+      }
+    }
+  }
   main {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 2rem;
       padding: 3rem 1rem;
-
-      .main-card {
-        display: flex;
-        flex-direction: column;
-        align-self: flex-start;
-        align-items: center;
-        background-color: var(--card-bg);
-        width: stretch;
-        max-width: 19rem;
-        padding: 1rem;
-        border-radius: 9px;
-        
-        .card-header {
-          display: flex;
-          gap: 1.5rem;
-          align-items: center;
-                    
-          h1 {
-            font-family: 'Poppins', sans-serif;
-            font-size: 1.5rem;
-            font-weight: 700;
-          }
-          #show-input {
-            width: 2rem;
-            height: 2rem;
-            border: none;
-            border-radius: 20px;
-            color: var(--plus-bt);
-            font-size: 1.2rem;
-            background-color: var(--body-grad2); 
-          }
-        }
-        form {
-          padding: 0.5rem;
-          display: none;
-          gap: 1rem;
-          flex-direction: column;  
-          width: 90%;      
-
-          &[aria-expanded="true"] {
-            animation: slidein 300ms forwards;
-            display: flex;
-          }
-          &[aria-expanded="false"][data-transition="true"] {
-            animation: slideout 300ms forwards;
-            display: flex;
-          }
-          div { 
-            .description {
-              display: flex;
-              justify-content: space-between;
-
-              p {                
-                transform: translateY(1.6rem) translateX(.5rem);
-                &[aria-expanded="true"] {
-                  animation: goUp 400ms forwards;
-                }
-                &[aria-expanded="false"][data-transition="true"] {
-                  animation: goDown 400ms forwards;
-                }
-              }
-              button {         
-                background-image: url('https://cdn-icons-png.flaticon.com/512/1159/1159745.png');
-                background-size: contain;
-                border: none;
-                background-repeat: no-repeat;
-                background-color: transparent;
-                width: 11%;
-                
-                &:focus {
-                  transition-property: background;
-                  transition: 400ms ease-in-out;
-                  background-image: url('https://cdn-icons-png.flaticon.com/512/248/248961.png');
-                }
-              }
-            }                       
-              .error-msg {
-                font-size: .8rem;
-                font-weight: 700;
-                padding: .3rem 0;
-                color: var(--conf-bt-bg);
-              }
-          }
-          div,fieldset {           
-            border: none;    
-            input {
-              width: 100%;
-              height: 1.5rem;
-            } 
-          } 
-          .form-botao {
-            width: 35%;  
-            padding: .3rem;
-            background-color: var(--body-grad2);
-            font-size: 1rem;
-            border-radius: 9px;
-            border: none;
-            box-shadow: .15rem .2rem 0 0 rgba(0, 0, 0, 0.164);
-
-            &:hover {
-              transform: scale(1.1);
-            }
-            &:focus {
-              transform: scale(1);
-              box-shadow: none;
-            }
-          }  
-        }
-      }
+      margin-top: 5rem;
+          
         ul {
           display: grid;
-          border-radius: 9px;    
-          max-height: 73vh;         
+          margin:0 2rem;
+          border-radius: 9px;            
           gap: 1rem;
-          width: 100%;
-          overflow: hidden;
-          overflow-y: scroll;    
+          width: 100%;  
           background-color: transparent;
           list-style-type: none;
 
@@ -160,6 +173,7 @@ body {
             border: 2px solid rgb(224, 221, 221);
             box-shadow: .1rem .1rem 0 0 rgb(151, 150, 150);
             background-color: white;
+            word-break:break-all;
 
             .task-checker {
               grid-row: 1/2;
@@ -179,7 +193,6 @@ body {
             label,input[type=text] {
               grid-column: 2/-1;
               grid-row: 1/3;              
-              word-break:keep-all;
               justify-self: start;
               margin-left: .5rem;
             }
@@ -326,32 +339,17 @@ body {
   }
 }
 
-
-@media (min-width:425px) {
-  
-}
-
-@media (min-width:600px) {
-  main {
-    padding: 3rem 6rem !important;
-  }
-  
-}
 @media (min-width:1000px) {
-
   ul {
     grid-template-columns: repeat(2,1fr);
     gap: 1rem;
   }
- 
 }
 @media (min-width:1300px) {
-
   ul {
     grid-template-columns: repeat(3,1fr);
     gap: 1rem;
   }
-
 }
 @keyframes slidein {
   from {
