--- a/Task-List/css/styles.css
+++ b/Task-List/css/styles.css
@@ -212,7 +212,7 @@ body main {
       -ms-flex-align: center;
           align-items: center;
   gap: 2rem;
-  padding: 7rem 1rem;
+  padding: 9rem 1rem 0;
 }
 
 body main ul {
