--- a/Task-List/css/styles.scss
+++ b/Task-List/css/styles.scss
@@ -152,8 +152,8 @@ body {
       flex-direction: column;
       align-items: center;
       gap: 2rem;
-      padding: 7rem 1rem;
-      // margin-top: 2rem;
+      padding: 9rem 1rem 0;
+      
           
         ul {
           display: grid;
