--- a/Task-List/css/styles.css
+++ b/Task-List/css/styles.css
@@ -31,13 +31,13 @@ body {
   background: linear-gradient(195deg, var(--body-grad1) 50%, var(--body-grad2) 50%);
   background-repeat: no-repeat;
   font-family: 'Poppins', sans-serif;
+  padding: 2rem 1.5rem;
 }
 
 body header {
   background: transparent;
   position: fixed;
   top: 0;
-  padding-left: 1rem;
   margin-top: 2rem;
   border-radius: 10px;
   z-index: 10;
@@ -61,6 +61,7 @@ body header .main-card {
   width: -moz-available;
   width: stretch;
   max-width: 19rem;
+  min-width: 14.5rem;
   padding: 1rem;
   border-radius: 9px;
   -webkit-box-shadow: 0.15rem 0.15rem 0 0 rgba(0, 0, 0, 0.342);
@@ -212,13 +213,12 @@ body main {
       -ms-flex-align: center;
           align-items: center;
   gap: 2rem;
-  padding: 9rem 1rem 0;
+  padding-top: 9rem;
 }
 
 body main ul {
   display: -ms-grid;
   display: grid;
-  margin: 0 2rem;
   border-radius: 9px;
   gap: 1rem;
   width: 100%;
@@ -239,7 +239,7 @@ body main ul li {
   -webkit-box-shadow: 0.1rem 0.1rem 0 0 #979696;
           box-shadow: 0.1rem 0.1rem 0 0 #979696;
   background-color: white;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 body main ul li .task-checker {
