--- a/Task-List/css/styles.scss
+++ b/Task-List/css/styles.scss
@@ -26,17 +26,14 @@ body {
   background: linear-gradient(195deg, var(--body-grad1) 50%, var(--body-grad2) 50%);
   background-repeat: no-repeat;
   font-family: 'Poppins', sans-serif;
-
+  padding: 2rem 1.5rem;
   header {
     background: transparent;
     position: fixed;
     top: 0;
-    padding-left: 1rem;
     margin-top: 2rem;
     border-radius: 10px;
     z-index: 10;
-    
-
     .main-card {
       display: flex;
       flex-direction: column;
@@ -45,6 +42,7 @@ body {
       background-color: var(--card-bg);
       width: stretch;
       max-width: 19rem;
+      min-width: 14.5rem;
       padding: 1rem;
       border-radius: 9px;
       box-shadow: .15rem .15rem 0 0 rgba(0, 0, 0, 0.342);
@@ -152,12 +150,9 @@ body {
       flex-direction: column;
       align-items: center;
       gap: 2rem;
-      padding: 9rem 1rem 0;
-      
-          
+      padding-top: 9rem;          
         ul {
           display: grid;
-          margin:0 2rem;
           border-radius: 9px;            
           gap: 1rem;
           width: 100%;  
@@ -174,7 +169,7 @@ body {
             border: 2px solid rgb(224, 221, 221);
             box-shadow: .1rem .1rem 0 0 rgb(151, 150, 150);
             background-color: white;
-            word-break:break-all;
+            word-break:break-word;
 
             .task-checker {
               grid-row: 1/2;
